{
    "version": 1,
    "name": "playerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "4d6ab97c-c4d0-4866-b9ae-bfd94b4e23e4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "dda4ee1d-e79b-4849-998f-6a138715d1fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TestFirstSkill",
                    "type": "Button",
                    "id": "44aa0538-b46d-4f65-b76a-68dbe5053157",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestSecondSkill",
                    "type": "Button",
                    "id": "58c15423-3dce-49dd-bb83-5a54202a2785",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestThirdSkill",
                    "type": "Button",
                    "id": "e1520ce8-52da-4844-b32c-eb6180e36fc3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestFourthSkill",
                    "type": "Button",
                    "id": "e95f9604-b741-400d-b395-50e0b86a3153",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "03e6eb6e-7842-4d21-bbbc-df7eafc2c523",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "922a2d86-6213-4554-96b2-bab1a9d30a5c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "067a3086-64a1-41b8-96f9-26546cd669d7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ef00a76f-4eb5-4840-9823-9750db635881",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7f982c23-3db4-4e35-8aa8-7b9b74c0f95b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4290f2ce-2cab-40fd-bff9-64d57f3adee4",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestFirstSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09eb125b-5d72-4bb6-b97a-896ff18c0a56",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestSecondSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a19bf1c-c940-4476-b883-d1313c168fa0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestThirdSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1705747a-be70-455f-8621-e11fe5b16e47",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestFourthSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}